// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Panel /> renders a panel 1`] = `
<div
  className="panel  card"
  style={
    {
      "height": undefined,
    }
  }
>
  <div
    className="card-body"
    style={
      {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;

exports[`<Panel /> renders a panel with a heading 1`] = `
<div
  className="panel  card"
  style={
    {
      "height": undefined,
    }
  }
>
  <h3
    className="card-header"
  >
    <span
      className="unselectable"
    >
      Title
    </span>
    <div
      style={
        {
          "float": "right",
        }
      }
    />
  </h3>
  <div
    className="card-body"
    style={
      {
        "display": null,
      }
    }
  >
    <p>
      Lorem ipsum...
    </p>
  </div>
</div>
`;
